# Shorty

./: AGENTS.md  README.md  alembic.ini  main.py  pyproject.toml  test.db
.opencode/: AGENTS.md
alembic/: env.py
alembic/versions/: 03133bd5d4a9_add_clicks_column.py  04ea58b4eee9_add_created_by_to_urls.py  0fdaf0c9d906_create_urls_table.py  8fa8087d9eaf_add_expires_at_to_urls.py  e5d752d7804b_add_is_blocked_to_urls.py  f11a93647e5b_add_deleted_at_to_urls.py
openspec/changes/archive/2026-06-02-generate-short-link/: design.md
openspec/changes/archive/2026-06-05-auth-proxy-entra-id/: design.md  proposal.md  tasks.md
openspec/changes/auth-proxy-entra-id/: tasks.md
openspec/changes/change-to-mysql/: proposal.md  tasks.md
openspec/changes/change-to-mysql/specs/: no-change.md
openspec/changes/click-analytics/: tasks.md
openspec/changes/cpanel-deploy-readiness/: design.md  proposal.md  tasks.md
openspec/changes/generate-short-link/: proposal.md  tasks.md
openspec/changes/rate-limiting/: design.md  tasks.md
openspec/changes/redirect-short-url/: design.md  proposal.md  tasks.md
openspec/changes/user-url-management/: design.md  proposal.md  tasks.md
openspec/specs/auth-proxy/: spec.md
openspec/specs/click-analytics/: spec.md
openspec/specs/url-expiration/: spec.md
openspec/specs/url-redirect/: spec.md
openspec/specs/url-redirection/: spec.md
openspec/specs/url-shortening/: spec.md
openspec/specs/user-url-soft-delete/: spec.md
src/api/: dependencies.py  main.py  schemas.py
src/api/routes/: admin.py  my_urls.py  redirect.py  shortener.py
src/core/: base62.py  expiration.py  ports.py  rate_limit.py  snowflake.py
src/core/usecases/: block_url.py  create_short_url.py  get_my_url.py  list_all_urls.py  list_my_urls.py  resolve_url.py  soft_delete_my_url.py  unblock_url.py
src/infra/: config.py
src/infra/cache/: redis.py
src/infra/db/: models.py  repository.py
tests/integration/: test_admin_endpoints.py  test_click_analytics.py  test_create_url_endpoint.py  test_expiration.py  test_my_urls_delete.py  test_my_urls_detail_endpoint.py  test_my_urls_list_endpoint.py  test_rate_limit_endpoints.py  test_redirect.py  test_repository.py
tests/unit/: test_base62.py  test_block_url.py  test_click_counter.py  test_create_short_url.py  test_expiration.py  test_get_my_url.py  test_list_all_urls.py  test_list_my_urls.py  test_rate_limit.py  test_redis_cache.py  test_resolve_url.py  test_snowflake.py  test_soft_delete_my_url.py  test_unblock_url.py
(+31 files in other folders)
